// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> component match snapshot on 24px size (initials) 1`] = `
<div
  aria-label="Jon Snow"
  class="sc-AykKC cLAIFd"
  color="white"
  font-size="11"
  size="24"
>
  J
</div>
`;

exports[`<Avatar /> component match snapshot on 40px size (image src) 1`] = `
<div
  aria-label="Jon Snow"
  class="sc-AykKC iLXZeW"
  color="white"
  font-size="16"
  size="40"
>
  <img
    alt="Jon Snow"
    src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Nikola-tesla-3909844.jpg"
  />
</div>
`;

exports[`<Avatar /> component match snapshot on 40px size (initials) 1`] = `
<div
  aria-label="Jon Snow"
  class="sc-AykKC iLXZeW"
  color="white"
  font-size="16"
  size="40"
>
  JS
</div>
`;
